config client and server to calc poi's time and add tests to server functions